fixed and added more functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Notebook/.ipynb_checkpoints/Singly Linked List-checkpoint.ipynb
 Singly Linked List/__pycache__/singlyLinkedList.cpython-37.pyc
+Notebook/.ipynb_checkpoints/Doubly Linked List-checkpoint.ipynb
