added programs and functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 Notebook/.ipynb_checkpoints/Singly Linked List-checkpoint.ipynb
 Singly Linked List/__pycache__/singlyLinkedList.cpython-37.pyc
 Notebook/.ipynb_checkpoints/Doubly Linked List-checkpoint.ipynb
+Notebook/.ipynb_checkpoints/Stack-checkpoint.ipynb
+Doubly Linked List/__pycache__/doublylinkedlist.cpython-37.pyc
+Notebook/.ipynb_checkpoints/Singly Circular Linked List-checkpoint.ipynb
